crates/fec-cli/src/commands/snapshots/libfec__commands__rss__tests__ui_with_error.snap
---
source: crates/fec-cli/src/commands/rss.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌FEC RSS Feed──────────────────────────────────────────────────────────────────┐"
"│FEC Electronic Filing RSS Feed  Error: Connection timeout                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌Recent Filings (error fetching)───────────────────────────────────────────────┐"
"│Committee                                Form   Report    Filing ID  Age      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"    Next refresh: 4:59  │  q quit  r refresh  ↑↓/gg/G nav  Enter open  y copy   "
"                    https://efilingapps.fec.gov/rss/generate                    "
